--- a/html/index.html
+++ b/html/index.html
@@ -9,7 +9,7 @@
                 <p></p>
 
 		<ul>
-			<li><p>Pour créer l'image avecdqsdqzdqzdz dockerfile : </p></li>
+			<li><p>Pour créer l'image  dockerfile : </p></li>
         	        <code>
 				docker build -t &lt;choisir-un-nom-pour-l&#39;image&gt; .
 	                </code>
