--- a/html/index.html
+++ b/html/index.html
@@ -11,7 +11,7 @@
 
 
 
-		<video>
+		<video controls>
 
 			<source src="video/Ultron kills Captain Marvel  Ultron Vs Captain Marvel  Epic Fight  What if... S01 E08.mp4"
 					type="video/mp4">
