--- a/html/index.html
+++ b/html/index.html
@@ -1,12 +1,18 @@
-<html>
+<!DOCTYPE html>
+<html lang="fr">
 	<head>
-		<meta charset="UTF-8">
+		<meta charset="UTF-8"/>
+		<link rel="stylesheet" type="text/css" media="all" href="Main.css"/>
+		<title>Accueil</title>
 	</head>
 
         <body>
-                <h1>Index</h1>
+			<header>
+				<nav>
+					<a href="#"><img src="images/logo_home"/></a>
+				</nav>
+			</header>
 
-                <p></p>
 
 
 
@@ -15,7 +21,7 @@
 
 			<source src="video/Ultron kills Captain Marvel  Ultron Vs Captain Marvel  Epic Fight  What if... S01 E08.mp4"
 					type="video/mp4">
-			ERREUR.
+			Votre navigateur n'est pas compatible avec l'intégration de vidéos.
 		</video>
 
         </body>
