--- a/html/index.html
+++ b/html/index.html
@@ -9,7 +9,7 @@
         <body>
 			<header>
 				<nav>
-					<a href="#"><img src="images/logo-home"/></a>
+					<a href="#"><img src="images/logo-home.png"/></a>
 				</nav>
 			</header>
 
