changement html/css

--- a/html/index.html
+++ b/html/index.html
@@ -13,29 +13,29 @@
 				</nav>
 			</header>
 
-		<div>
+		<div class="global">
 			<a href="film.html">
-				<div class="film">				
+				<div class="categorie film">				
 					Film
 				</div>
 			</a>
 
 			<a href="serie.html">
-				<div class="serie">
+				<div class="categorie serie">
 				Serie
 				</div>
 			</a>
 
 
 			<a href="music.html">
-				<div class="music">
+				<div class="categorie music">
 				Musique
 				</div>
 			</a>
 
 
 			<a href="anime.html">
-				<div class="anime">
+				<div class="categorie anime">
 				Anime
 				</div>
 			</a>
