--- a/html/index.html
+++ b/html/index.html
@@ -16,27 +16,27 @@
 		<div class="global">
 			<a href="film.html">
 				<div class="categorie film">				
-					Film
+					<strong>Film</strong>
 				</div>
 			</a>
 
 			<a href="serie.html">
 				<div class="categorie serie">
-				Serie
+				<strong>Serie</strong>
 				</div>
 			</a>
 
 
 			<a href="music.html">
 				<div class="categorie music">
-				Musique
+					<strong>Musique</strong>
 				</div>
 			</a>
 
 
 			<a href="anime.html">
 				<div class="categorie anime">
-				Anime
+					<strong>Anime</strong>
 				</div>
 			</a>
 
